--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.0",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "3.0",
+        "spatie/laravel-activitylog": "^3.17",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
